--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,22 @@
-.green-button {
+#green-button {
     background-color: green;
     width: 200px;
     height: 200px;
 }
 
-.red-button {
+#red-button {
     background-color: red;
     width: 200px;
     height: 200px;
 }
 
-.yellow-button {
+#yellow-button {
     background-color: yellow;
     width: 200px;
     height: 200px;
 }
 
-.blue-button {
+#blue-button {
     background-color: blue;
     width: 200px;
     height: 200px;
