--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,15 @@
     border-radius: 10%;
     max-height: 450px;
     max-width: 450px;
+    margin-left: 2.5vw;
 
 }
 
 .green-button {
 
     position: absolute;
-    left: 5%;
-    top: 5%;
+    left: 7.5%;
+    top: 7.5%;
     background-color: green;
     width: 40%;
     height: 40%;
@@ -33,8 +34,8 @@
 
 .red-button {
     position: absolute;
-    left: 50%;
-    top: 5%;
+    left: 52.5%;
+    top: 7.5%;
     background-color: red;
     width: 40%;
     height: 40%;
@@ -45,8 +46,8 @@
 
 .yellow-button {
     position: absolute;
-    bottom: 5%;
-    left: 5%;
+    bottom: 7.5%;
+    left: 7.5%;
     background-color: yellow;
     width: 40%;
     height: 40%;
@@ -57,8 +58,8 @@
 
 .blue-button {
     position: absolute;
-    left: 50%;
-    bottom: 5%;
+    left: 52.5%;
+    bottom: 7.5%;
     background-color: blue;
     width: 40%;
     height: 40%;
@@ -69,8 +70,8 @@
 
 .lit-green-button {
     position: absolute;
-    left: 5%;
-    top: 5%;
+    left: 7.5%;
+    top: 7.5%;
     background-color: #afffab;
     width: 40%;
     height: 40%;
@@ -81,8 +82,8 @@
 
 .lit-red-button {
     position: absolute;
-    left: 50%;
-    top: 5%;
+    left: 52.5%;
+    top: 7.5%;
     background-color: #ff8080;
     width: 40%;
     height: 40%;
@@ -93,8 +94,8 @@
 
 .lit-yellow-button {
     position: absolute;
-    bottom: 5%;
-    left: 5%;
+    bottom: 7.5%;
+    left: 7.5%;
     background-color: #fffd94;
     width: 40%;
     height: 40%;
@@ -105,8 +106,8 @@
 
 .lit-blue-button {
     position: absolute;
-    left: 50%;
-    bottom: 5%;
+    left: 52.5%;
+    bottom: 7.5%;
     background-color: #8383f7;
     width: 40%;
     height: 40%;
