--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 #simon-header {
+    
     margin: 1rem 0;
 }
 
 #new-game-button,
 #how-to-play-button {
+    
     margin: 1rem 0;
 }
 
@@ -16,7 +18,6 @@
     max-height: 450px;
     max-width: 450px;
     margin-left: 2.5vw;
-
 }
 
 .simon-button {
@@ -27,70 +28,69 @@
     max-width: 180px;
     max-height: 180px;
     border-radius: 10%;
-
 }
 
-.green-button {
+.top-left {
 
-    
     left: 7.5%;
     top: 7.5%;
+}
+
+.green {
+    
     background-color: green;
-
 }
 
-.red-button {
+.lit-green {
+    
+   background-color: #afffab;
+}
+
+.top-right {
     
     left: 52.5%;
     top: 7.5%;
+}
+
+.red {
+    
     background-color: red;
-    
 }
 
-.yellow-button {
+.lit-red {
     
-    bottom: 7.5%;
-    left: 7.5%;
-    background-color: yellow;
-    
-}
-
-.blue-button {
-    
-    left: 52.5%;
-    bottom: 7.5%;
-    background-color: blue;
-    
-}
-
-.lit-green-button {
-    
-    left: 7.5%;
-    top: 7.5%;
-    background-color: #afffab;
-    
-}
-
-.lit-red-button {
-    
-    left: 52.5%;
-    top: 7.5%;
     background-color: #ff8080;
     
 }
 
-.lit-yellow-button {
+.bottom-left {
     
     bottom: 7.5%;
     left: 7.5%;
-    background-color: #fffd94;
-    
 }
 
-.lit-blue-button {
+.yellow {
+    
+    background-color: yellow;
+}
+
+.lit-yellow-button {
+    
+    background-color: #fffd94;
+}
+
+.bottom-right {
     
     left: 52.5%;
     bottom: 7.5%;
-    background-color: #8383f7;
+}
+
+.blue {
     
+    background-color: blue;
+}
+
+.lit-blue {
+    
+    background-color: #8383f7;
 }
