Adjusted colour of yellow button for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,12 +71,12 @@
 
 .yellow {
     
-    background-color: yellow;
+    background-color: #cdcd15;
 }
 
 .lit-yellow {
     
-    background-color: #fffd94;
+    background-color: #ffff82;
 }
 
 .bottom-right {
