Adjusted margin of game board

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
     width: 95vw;
     height: 95vw;
     border-radius: 10%;
-    margin-left: 2.5vw;
+    margin: 0 auto;
 }
 
 .simon-button {
@@ -98,7 +98,7 @@
 
         width: 546px;
         height: 546px;
-        margin-left: 14px;
+        
     }
 
 
