Darkened colours of buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
 
 .green {
 
-    background-color: green;
+    background-color: #006000;
 }
 
 .lit-green {
@@ -51,7 +51,7 @@
 
 .red {
 
-    background-color: red;
+    background-color: #a40000;
 }
 
 .lit-red {
@@ -68,7 +68,7 @@
 
 .yellow {
 
-    background-color: #cdcd15;
+    background-color: #abab00;
 }
 
 .lit-yellow {
@@ -84,7 +84,7 @@
 
 .blue {
 
-    background-color: blue;
+    background-color: #0000bc;
 }
 
 .lit-blue {
