--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round&display=swap');
 
+body {
+    font-family: 'Varela Round', sans-serif;
+}
+
 #simon-header {
 
-    font-family: 'Varela Round', sans-serif;
-    margin: 1rem 0;
+    font-size: 4rem;
+    margin-top: 0.5rem;
+    
 }
 
 #new-game-button,
 #how-to-play-button {
 
-    margin: 1rem 0;
+    margin-bottom: 1rem;
 }
 
 #game-board {
