--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,15 @@ body {
     margin-top: 0.5rem;
 }
 
+#game-over, #hs-alert {
+    
+    /* always want these to appear over the game board */
+    z-index: 1;
+    position: relative;
+    color: #fff;
+    font-size: 2rem;
+}
+
 #game-board {
 
     position: relative;
@@ -36,6 +45,11 @@ body {
     height: 95vw;
     border-radius: 10%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    
 }
 
 .simon-button {
