--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
 .score-text {
     
     font-size: 1.25rem;
-    margin-top: 0.5rem;
+    margin: 0.5rem 0;
 }
 
 #game-over, #hs-alert {
@@ -34,7 +34,7 @@ body {
     z-index: 1;
     position: relative;
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 #game-board {
