--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ body {
 #how-to-play-button {
 
     margin-bottom: 1rem;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
 }
 
 #high-score, #current-score {
@@ -49,6 +51,8 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    max-height: 450px;
+    max-width: 450px;
     
 }
 
@@ -127,42 +131,5 @@ body {
 
 @media (min-width: 576px) {
 
-    #game-board {
-
-        width: 546px;
-        height: 546px;
-        
-    }
-
-
-    .simon-button {
-
-        width: 224px;
-        height: 224px;
-        border-radius: 10%;
-    }
-
-    .top-left {
-
-        left: 33px;
-        top: 33px;
-    }
-
-    .top-right {
-
-        left: 289px;
-        top: 33px;
-    }
-
-    .bottom-left {
-
-        bottom: 33px;
-        left: 33px;
-    }
-
-    .bottom-right {
-
-        left: 289px;
-        bottom: 33px;
-    }
+    
 }
